# PIE-V

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
analysis/: procedure_logic_score.py
baselines/freeform/: diagnose_llm_freeform_outputs.py  llm_error_plan_freeform_writer.py
configs/: defaults.toml
data/: README.md
data/annotations/: PIE-V_Annotation_Template.xlsx  README.md  annotation_summary.csv
data/examples/: README.md  openai_diagnostics.csv  openai_judged_report.csv  qwen_diagnostics.csv  split_50_error_instructions_openai.json  split_50_error_instructions_openai_judged.json  split_50_error_instructions_qwen.json  split_50_error_instructions_qwen_judged.json  split_50_error_plan.json  split_50_error_plan_with_corrections.json  split_50_llm_freeform_errors_openai.json  split_50_llm_freeform_errors_qwen.json
data/examples/new_annotations/: cmu_bike15_3_runway.json  georgiatech_covid_18_10_seedance.json  nus_covidtest_36_2_seedance.json  sfu_cooking_008_5_kling.json  (+2 more)
data/manifests/: README.md  take_names.txt
data/resources/: README.md  embedded_predicates.csv  role_predicate_pairs.csv  semantic_representations_split_50.json  semantic_roles.csv  semantic_roles_by_predicate.csv  split_50_vocabulary.csv  structural_roles.csv
docs/: index.html  make_pipeline_asset.py  styles.css
examples/video_generation/: README.md
paper/: README.md
prep/: make_split_50_vocabulary.py
prep/semrep/: extend_sem_rep_wrapper.py  generate_sem_rep.py
release_assets/cvprw26/: README.md  manifest.json
src/piev/: __init__.py  config.py  correction_simulator.py  error_instruction_judge.py  error_instruction_writer.py  error_simulator.py
tests/: test_public_release.py
(+5 files in other folders)
